# MLOps-Pipeline-for-Tabular-Classification-with-ONNX-FastAPI

./: Dockerfile  README.md  infer.py  main.py  pyproject.toml  train.ipynb
.github/workflows/: first.yml  second.yml
models/: model.onnx  model.onnx.data
